<resources>
    <string name="account">Account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="settings">Settings</string>
    <string name="login">Login with Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="hi_user">Hello %1$s!</string>
    <string name="first_name_invalid">First name is invalid</string>
    <string name="last_name_invalid">Last name is invalid</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_invalid">Password is invalid</string>
    <string name="confirm_password_invalid">Confirm Password is invalid</string>
    <string name="confirm_password_does_not_match">Confirm Password does not match</string>
    <string name="enroll_in_biometrics">Enroll in Biometrics</string>
    <string name="use_biometrics">Use Biometrics</string>
    <string name="use_biometrics_for_login">Would you like to use Biometrics for login?</string>
    <string name="app_version">Version: %1$s (Build: %2$s)</string>
    <string name="confirm_to_complete_enrollment">Confirm To Complete Enrollment</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_to_login">Confirm to Login</string>
</resources>